# polkadot-stack-template

./: Cargo.toml  deployments.json  genesis-state.hex  pba
.github/workflows/: ci-e2e-dex.yml
blockchain/: chain_spec.json  zombienet.toml
blockchain/precompiles/asset-conversion/src/: lib.rs
blockchain/runtime/: Cargo.toml
blockchain/runtime/src/: genesis_config_presets.rs  lib.rs  tests.rs
blockchain/runtime/src/configs/: mod.rs
contracts/pvm-rust/: Cargo.toml  CoveredCall.sol  DexRouter.sol  VersionRegistry.sol  build.rs
contracts/pvm-rust/e2e/: hardhat.config.ts  package-lock.json  package.json
contracts/pvm-rust/e2e/scripts/: deploy-covered-call.ts
contracts/pvm-rust/e2e/test/: CoveredCall.test.ts  DexRouter.test.ts  VersionRegistry.test.ts
contracts/pvm-rust/src/: covered-call.rs  covered_call_mock_api.rs  dex-router.rs  encoding.rs  mock_api.rs  version-registry.rs  version_registry_mock_api.rs
docker/: Dockerfile.eth-rpc
scripts/: common.sh  start-all.sh
web/src/: App.tsx  main.tsx
web/src/config/: deployments.ts  dex.ts
web/src/pages/: DexPage.tsx  OptionsPage.tsx
